testsuite/tests/typecheck/should_fail/tcfail166.stderr

tcfail166.hs:6:13: error: [GHC-25955]
    Illegal symbol ‘forall’ in type
    Suggested fix:
      Perhaps you intended to use RankNTypes (implied by ImpredicativeTypes)
      or a similar language extension to enable explicit-forall syntax: forall <tvs>. <type>
